client/src/styles/searchbar.module.css
/*The following are the main colours that I want to use
    - Light green: #4BBF84
    - Egg-white: #EAEAEA
    - Purple: #89609E
    - Red: #B04632
    - Blue: #0079BF
    - Mustard yellow: #D29034
*/
.recipediaLogoContainer {
  /* width: 200px; */
  min-width: 130px;
  object-fit: contain;
  height: 100%;
  justify-content: center;
  align-items: center;
  padding-right: 23px;
}

.resultsUpperContainer {
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  backdrop-filter: blur(5px);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 80%;
  padding-left: 75px;
  padding-right: 10%;
  max-width: 90%;
  z-index: 10;
}

.buttonContainer {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.searchContainer {
  width: max-content;
  min-width: 100%;
  max-width: 100%;
  margin-top: 5%;
  display: flex;
}

.searchButtonAttitude {
  font-size: 11px;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 500;
  border: none;
  transition: all 0.3s ease 0s;
  cursor: pointer;
  outline: none;
  background-color: rgb(225, 225, 225);
  box-shadow: 0px 8px 15px rgba(119, 119, 119, 0.1);
}

.searchButtonAttitude:hover {
  background-color: #4bbf84;
  padding: 15px;
  color: white !important;
}

.searchIconContainer {
  height: 100%;
  width: 50px;
  margin-right: 15px;
  cursor: pointer;
}

.searchIconImg {
  width: 67%;
  height: 100%;
  position: relative;
  object-fit: contain;
  transform: rotate(-50deg);
  padding-left: 15px;
  padding-right: 15px;
}

.inputContainer {
  cursor: text;
  /* overflow-y: auto; */

  flex: 2 1 100%;
  align-self: stretch;
  box-sizing: border-box;

  padding: 4px;

  background-color: #ffffff;

  outline: 0; /* remove focuse border style of mac system */
  border: none;

  transition: all 0.2s linear 0s;
}

.inputContainer .focused {
  border-color: #0096cc;
}

.inputContainer .errors {
  border-color: #db3d44;
}

.autosizedWrapper {
  /* display: inline-block; */
  display: flex;
  float: left;
  overflow: hidden;
  margin-right: 4px;
  /* height: 24px; */
  vertical-align: middle;
  /* justify-content: center; */
}

input {
  height: 100%;
  vertical-align: inherit;
  border: 0;
  outline: 0; /* remove focuse border style of mac sysytem*/
  padding: 0;
  margin: 0;
  cursor: text;
  box-shadow: none;
  background: none;
  color: #222222;
  font-size: 20px;
  font-family: "Roboto", sans-serif;
}

.tokenList {
  float: left;

  margin-right: 4px;
  margin-bottom: 4px;

  padding-top: 2px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-left: 8px;

  max-width: 100%;
  height: 100%;
  line-height: 20px;

  white-space: nowrap;

  border-radius: 3px;

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

/* .tokenList:hover {
  cursor: pointer;
  background-color: #e6f4fc;
} */

.labelWrapper {
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  max-width: calc(100% - 10px);
  vertical-align: middle;
}

.deleteButton {
  font-size: 14px;
  line-height: 20px;
  padding: 2px 0 2px 4px;
  cursor: pointer;
  color: #222222;
  opacity: 0.5;
}

.deleteButton:hover {
  opacity: 1;
}

.deleteButton:after {
  content: "x";
}

/*The following classes are for the tooltip error element*/
/*Influenced from this site: https://www.w3schools.com/css/css_tooltip.asp*/
.toolTipError {
  width: 175px;
  background-color: #b04632;
  color: white;
  text-align: center;
  padding: 10px;
  border-radius: 6px;
  font-weight: 600;
  font-size: 15px;
  margin-left: -212px;
  margin-top: -2px;
  white-space: normal;
  cursor: default;

  /* Position the tooltip text*/
  position: absolute;
  z-index: 10;
  /* transform: translate(-245px, -25px); */
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
  transition: opacity 0.5s;
}

/*This is if we want the arrow to show on the left*/
/* .toolTipError::after {
  content: " ";
  position: absolute;
  top: 50%;
  right: 100%;
  margin-top: -15px;
  border-width: 15px;
  border-style: solid;
  border-color: transparent #b04632 transparent transparent;
} */

/* This is if we want the arrow to show on the right */
.toolTipError::after {
  content: " ";
  position: absolute;
  top: 50%;
  left: 100%;
  margin-top: -10px;
  border-width: 10px;
  border-style: solid;
  border-color: transparent transparent transparent #b04632;
}

/*The following styles are focused on the search tokens generated*/
.tokenX {
  cursor: pointer;
  /* padding-right: 10px; */
  padding: 3px 7px 4px 7px;
  margin: 5px 8px 5px 5px;
  color: white;
  align-self: center;
  font-size: 14px;
  transform: scaleX(1.2);
  border-radius: 50%;
  transition: all 0.2s;
}

.tokenX:hover {
  backdrop-filter: brightness(1.1);
}

.tokenX:active {
  backdrop-filter: brightness(1.2);
  font-weight: normal;
}

/*The following styles are for the suggestion token*/
.suggestionBox {
  display: inline-block;
  cursor: pointer;
  background-color: #e5b181; /*May need to change brightness*/
  color: white;
  border-radius: 20px;
  padding: 7px 10px 10px 10px;
  margin: 5px;
  box-shadow: 0px 8px 15px rgba(119, 119, 119, 0.1);
  filter: brightness(1);
  transform: scale(1);
  transition: transform 0.1s, filter 0.3s;
}

.suggestionBox:hover {
  transform: scale(1.1);
}

.suggestionBox:active {
  filter: brightness(1.1);
}

